<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="csv_task_context_to_export"
        android:title="@string/context_to_export"
        android:summary="%s" />

    <ListPreference android:key="csv_tasks_to_export"
        android:entryValues="@array/csv_tasks_to_export_keys"
        android:entries="@array/csv_tasks_to_export_texts"
        android:title="@string/tasks_to_export"
        android:defaultValue="only_open_tasks"
        android:summary="%s" />

    <PreferenceCategory android:key="csv_properties"
        android:title="@string/properties">

        <CheckBoxPreference android:key="csv_properties_field_names"
            android:title="@string/field_names"
            android:defaultValue="true" />

        <CheckBoxPreference android:key="csv_properties_unix_time"
            android:title="@string/unix_time"
            android:defaultValue="false" />

        <CheckBoxPreference android:key="csv_properties_id"
            android:title="@string/id"
            android:defaultValue="false" />

        <CheckBoxPreference android:key="csv_properties_description"
            android:title="@string/description"
            android:defaultValue="false" />

        <CheckBoxPreference android:key="csv_properties_tags"
            android:title="@string/tags_1"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
