<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="25dp"
    android:paddingEnd="10dp"
    android:orientation="vertical"
    tools:context="jajimenez.workpage.AboutActivity">

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView android:id="@+id/about_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/app_name" />

            <TextView android:id="@+id/about_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_description" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal">

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/version" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_version" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/author" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_author" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/license" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_license" />
        </TableRow>
    </TableLayout>

    <TableLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/project_website" />
        </TableRow>

        <TableRow>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_web_site" />
        </TableRow>
    </TableLayout>
</LinearLayout>
