<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jajimenez.workpage.FileBrowserActivity">

    <LinearLayout android:id="@+id/file_browser_exporting_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/as"
            android:textSize="18sp" />

        <Button android:id="@+id/file_browser_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFormatButtonClicked" />

        <ImageButton android:id="@+id/file_browser_format_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"
            android:contentDescription="@string/format_options"
            android:onClick="onFormatOptionsImageButtonClicked" />

    </LinearLayout>

    <ListView android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout android:id="@+id/file_browser_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText android:id="@+id/file_browser_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/file_name" />

        <TextView android:id="@+id/file_browser_file_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/file_browser_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="onSaveButtonClicked" />
    </LinearLayout>

    <TextView android:id="@+id/file_browser_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/storage_not_available" />
</LinearLayout>