<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:workpage="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <EditText android:id="@+id/edit_task_tag_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/tag_name" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <CheckBox android:id="@+id/edit_task_tag_set_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_color" />

        <jajimenez.workpage.ColorView android:id="@+id/edit_task_tag_selected"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            workpage:borderWidth="2dp"
            workpage:borderColor="@color/color_view_border"
            workpage:backgroundColor="@color/color_view_background" />

        <Button android:id="@+id/edit_task_tag_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />
    </LinearLayout>
</LinearLayout>
